# erasm-plusplus

./: .gitignore  AUTHORS  CNAME  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  TODO  configure  configure.ac  index.html  manual.css  manual.html  manual2.html  manual3.html  manual4.html
demo/: .gitignore  demo64.cpp  demo86.cpp  dsm64.cpp  dsm86.cpp  dsm86_counter.cpp
doc/: .gitignore  manual.bib  manual.lhs  manual.tex
src/: .gitignore  Makefile.am  Makefile.in  TODO  check_illegal_code.sh  check_illegal_code_x64.sh  check_illegal_code_x86_32.sh  config.h.in  dprintf.cpp  dprintf.h  gnu_disassembler.cpp  gnu_disassembler.hpp  hook_test.cpp  iotest.cpp  memory_protection.hpp  mystream.hpp  test_assembler_common.sh  test_faststream.cpp  test_gnudsm.cpp  test_gnudsm.hpp  test_meta_binomial_heap.cpp  test_meta_leftist_heap.cpp  test_x64_assembler_64_32.sh  test_x64_disassembler_64_32.sh  test_x86_assembler_32_32.sh  test_x86_disassembler_32_32.sh  unit_test_main.cpp
src/erasm/: common_macros.hpp  demo86.cpp  dsm_x64.hpp  dsm_x64_auto_stm.hpp  dsm_x64_performance_test.cpp  dsm_x64_test_main.cpp  dsm_x64_unit_test.cpp  dsm_x64_util.hpp  dsm_x86.hpp  dsm_x86_auto_stm.hpp  dsm_x86_count_cti.cpp  dsm_x86_count_ret.cpp  dsm_x86_demo.cpp  dsm_x86_performance_test.cpp  dsm_x86_test_main.cpp  dsm_x86_test_noio.cpp  dsm_x86_util.hpp  faststream.cpp  faststream.hpp  intel_common.hpp  intel_prefix_bitset.hpp  meta_leftist_heap.hpp  meta_polynomial.hpp  meta_prelude.hpp  meta_prelude_core.hpp  meta_prelude_functions.hpp  meta_prelude_ifn.hpp  meta_prelude_impl.hpp  x64.cpp  x64.hpp  x64_addr32_data16.cpp  x64_addr32_data16.hpp  x64_addr32_data32.cpp  x64_addr32_data32.hpp  x64_addr32_test.cpp  x64_addr64.hpp  x64_addr64_data16.cpp  x64_addr64_data16.hpp  x64_addr64_data32.cpp  x64_addr64_data32.hpp  (+48 more)
src/haskell/: Combinators.hs  EncodedInstructionDefinition.hs  Equivalence.hs  ErasmChecker.hs  ErasmCommon.hs  ErasmParseCommon.hs  Makefile.am  Operands.hs  PartialOrder.hs  Polynomial.hs  Prefix.hs  Preprocessor.hs  ShellCommon.hs  erasm.cabal  my_ghc_testframework.m4
